<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddDataActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputNama"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:hint="@string/nama"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="#2196F3"
        app:endIconMode="clear_text"
        app:endIconTint="#2196F3"
        app:hintTextColor="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noHp"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/noHp"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="#2196F3"
        app:endIconMode="clear_text"
        app:endIconTint="#2196F3"
        app:hintTextColor="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="DuplicateClickableBoundsCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/JK"
        android:textColor="@color/black"
        android:textSize="7pt" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="7dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laki_laki" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perempuan" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lainnya" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateInput"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/ttl"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="#2196F3"
        app:endIconDrawable="@drawable/ic_calendar"
        app:endIconMode="custom"
        app:endIconTint="#2196F3"
        app:hintTextColor="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ttl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            tools:ignore="DuplicateClickableBoundsCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inpuQuote"
        android:layout_width="370dp"
        android:layout_height="261dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/quote"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="#2196F3"
        app:endIconMode="clear_text"
        app:endIconTint="#2196F3"
        app:hintTextColor="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:maxLines="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cornerRadius="5dp"
        android:text="@string/submit" />


</LinearLayout>