<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textQuoteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quotenote"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/textQuote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_toEndOf="@id/textQuoteLabel"
                android:layout_alignBaseline="@id/textQuoteLabel"
                android:layout_marginStart="8dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="20sp"
                android:text="@string/isi_quote" />

            <TextView
                android:id="@+id/textNamaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#474747"
                android:text="@string/namaTv"
                android:layout_below="@id/textQuoteLabel"
                android:layout_alignParentStart="true"
                android:textSize="12sp"
                android:layout_marginTop="3dp" />

            <TextView
                android:id="@+id/textNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/textNamaLabel"
                android:textColor="#474747"
                android:layout_alignBaseline="@id/textNamaLabel"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                android:text="@string/isi_nama" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
