<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:outlineProvider="bounds"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/opening"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:hint="@string/ID"
        android:outlineProvider="none"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="#2196F3"
        app:endIconMode="clear_text"
        app:endIconTint="#2196F3"
        app:hintTextColor="#2196F3"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:startIconTint="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/Pass"
        app:boxBackgroundColor="#002196F3"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#2196F3"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="#2196F3"
        android:text="@string/login"
        app:cornerRadius="5dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="Atau" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="5dp"
         />


</LinearLayout>