<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">


  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardElevation="10dp"
      android:layout_margin="8dp"
      app:cardCornerRadius="10dp">
    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:id="@+id/nama"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_alignParentTop="true"
          android:text="Nama"/>

      <TextView
          android:id="@+id/titik"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_marginStart="5dp"
          android:text=" : "
          android:layout_toEndOf="@id/noHp"/>

      <TextView
          android:id="@+id/showName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_marginStart="5dp"
          android:text="@string/ambil_database"
          android:layout_toEndOf="@id/titik"/>

      <TextView
          android:id="@+id/noHp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_marginTop="5dp"
          android:layout_below="@+id/showName"
          android:text="Nomor Handphone"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_marginStart="5dp"
          android:layout_below="@id/nama"
          android:text=" : "
          android:layout_toEndOf="@id/noHp"/>

      <TextView
          android:id="@+id/showHP"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_marginTop="5dp"
          android:layout_below="@+id/showName"
          android:layout_marginStart="5dp"
          android:layout_toEndOf="@id/titik"
          android:text="@string/ambil_database"/>

      <TextView
          android:id="@+id/JK"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_marginTop="5dp"
          android:layout_below="@+id/noHp"
          android:text="@string/JK"
        />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_marginStart="5dp"
          android:layout_below="@id/noHp"
          android:text=" : "
          android:layout_toEndOf="@id/noHp"/>

      <TextView
          android:id="@+id/showJK"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_marginTop="5dp"
          android:layout_below="@+id/showHP"
          android:layout_marginStart="5dp"
          android:layout_toEndOf="@id/titik"
          android:text="@string/ambil_database"/>

      <TextView
          android:id="@+id/TTL"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_marginTop="5dp"
          android:layout_below="@+id/JK"
          android:text="@string/ttl"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_marginStart="5dp"
          android:layout_below="@id/JK"
          android:text=" : "
          android:layout_toEndOf="@id/noHp"/>

      <TextView
          android:id="@+id/showTTL"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_below="@+id/showJK"
          android:layout_marginStart="5dp"
          android:layout_marginTop="5dp"
          android:layout_toEndOf="@id/titik"
          android:text="@string/ambil_database"/>


      <TextView
          android:id="@+id/quote"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_below="@+id/TTL"
          android:layout_marginTop="5dp"
          android:text="@string/quote"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:layout_marginTop="5dp"
          android:textColor="@color/black"
          android:layout_marginStart="5dp"
          android:layout_below="@id/TTL"
          android:text=" : "
          android:layout_toEndOf="@id/noHp"/>

      <me.biubiubiu.justifytext.library.JustifyTextView
          android:id="@+id/showQuote"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:layout_below="@+id/showTTL"
          android:layout_marginStart="5dp"
          android:layout_marginTop="5dp"
          android:layout_toEndOf="@id/titik"
          android:maxLines="10"
          android:text="@string/ambil_database"/>

    </RelativeLayout>
  </androidx.cardview.widget.CardView>

  <Button
      android:id="@+id/buttoEdit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:backgroundTint="#2196F3"
      app:cornerRadius="5dp"
      android:text="@string/edit" />

  <Button
      android:id="@+id/buttonHapus"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:backgroundTint="#2196F3"
      app:cornerRadius="5dp"
      android:text="Hapus"  />


</LinearLayout>